<resources>
        <string name="app_name" translatable="false">Peppermint</string>
        <string name="peppermint_com" translatable="false">Peppermint.com</string>
        <string name="google_app_id" translatable="false">peppermint-1077</string>
        <string name="gcm_default_sender_id" translatable="false">621894935907</string>
        <string name="filename_message_from" translatable="false">Message-from-</string>
        <string name="privacy_url" translatable="false">http://peppermint.com/privacy</string>
    <string name="send_email">Send Email</string>
    <string name="date_today">Today</string>
    <string name="date_yesterday">Yesterday</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="msg_must_authenticate_using_account">You must authenticate using a Google account</string>
    <string name="msg_database_error">An error occurred while trying to update your data. Please contact the support team if this persists.</string>
    <string name="msg_must_supply_mandatory_permissions">One or more of the required permissions are disabled. Please grant all required permissions and try again.</string>
    <string name="drawer_menu_recent_contacts">Recent Contacts</string>
    <string name="drawer_menu_all_contacts">All Contacts</string>
    <string name="drawer_menu_settings">Settings</string>
    <string name="drawer_menu_help_feedback">Help &amp; Feedback</string>
    <string name="drawer_menu_about">About</string>
    <string name="drawer_open_desc">Drawer menu is open!</string>
    <string name="drawer_closed_desc">Drawer menu is closed!</string>
    <string name="search_contacts">Search for Contacts</string>
    <string name="loading_contacts">Loading\nContacts…</string>
    <string name="add_contact">Add Contact</string>
    <string name="hold_record_release_send_p1">Hold </string>
    <string name="hold_record_release_send_p2">to record, release to send</string>
    <string name="enable_chat_heads">Enable Chat Heads?</string>
    <string name="enable">Enable</string>
    <string name="not_now">Not Now</string>
    <string name="msg_no_contacts">No contacts have been found</string>
    <string name="msg_record_at_least">Please record at least 1 second before sending</string>
    <string name="msg_record_error">An error has occurred while recording. Please try again later. If the error persists, please contact our support team.</string>
    <string name="msg_nomicdata_error">Unable to get any audio from the microphone. Please ensure that no other apps are using it.</string>
    <string name="msg_exceeded_maxduration">Maximum recording time has been reached. Stopped recording</string>
    <string name="msg_no_external_storage">No access to external storage. Please make sure it is available</string>
    <string name="msg_press_back_again_exit">Press \"back\" again to exit.</string>
    <string name="share_with_">Share with…</string>
    <string name="share_transcription_and_audio">Share Audio and Transcription</string>
    <string name="share_transcription">Share Transcription</string>
    <string name="share_audio">Share Audio</string>
    <string name="msg_no_transcription_sharing_audio">No transcription available. Sharing audio…</string>
    <string name="via">via</string>
    <string name="swipe_to_cancel">Swipe anywhere\nto cancel</string>
    <string name="recording_for">Recording for %1$s</string>
    <string name="sending_via_email">Sending via Email</string>
    <string name="add_email">Add Email</string>
    <string name="no_email_address">No email address found. Please insert an email address for this contact.</string>
    <string name="search_here_for_your_friend">Search here for your friend.</string>
    <string name="then_tap_and_hold_to_send">Then tap and hold\nto send them an audio message.</string>
    <string name="new_contact">New contact</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="save">Save</string>
    <string name="email">Email</string>
    <string name="take_photo">Take photo</string>
    <string name="choose_photo">Choose photo</string>
    <string name="select_photo">Select Photo</string>
    <string name="you_can_add_phone_contact_or_email">Please add an email contact</string>
    <string name="msg_invalid_contactname">Please enter a valid contact name</string>
    <string name="msg_insert_mail">Please enter a valid email address</string>
    <string name="msg_insert_phone">Please enter a valid phone number</string>
    <string name="msg_unable_addcontact">Unable to add contact. Please try again later</string>
    <string name="msg_no_camera_app">Your device doesn\'t have a camera app installed</string>
    <string name="msg_external_storage_error">Unable to create photo file in external storage</string>
    <string name="msg_contact_added">Contact added successfully!</string>
    <string name="recording">Recording…</string>
    <string name="paused">Paused</string>
    <string name="you_have_installed_peppermint">You have installed Peppermint</string>
    <string name="now_send_your_first_audio_message">Now send your first audio message!</string>
    <string name="new_message">New Message on Peppermint</string>
    <string name="sent_you_a_message">sent you a message</string>
        <string name="sender_default_message" translatable="false">Here\'s my message from Peppermint.</string>
        <string name="sender_default_mail_subject" translatable="false">I sent you an audio message</string>
        <string name="sender_transcription_mail_subject" translatable="false">Audio message: %1$s</string>
    <string name="sender_msg_send_error">An error occurred while trying to send your Peppermint message to %1$s. Please try again later.</string>
    <string name="sender_msg_no_internet">No internet connection. Peppermint will send your message when you connect.</string>
    <string name="sender_msg_no_gplay">No Google play services available. The task of sending your record has been queued. Please make sure you have an up to date version of Google play services installed.</string>
    <string name="sender_msg_secure_connection">Could not establish a secure connection to the Peppermint server. The task of sending your record has been queued.</string>
    <string name="sender_msg_unable_to_send_permissions">Unable to send your email message through Gmail. Please retry and accept the required permissions.</string>
    <string name="peppermint_sign_in">Sign in to Peppermint</string>
    <string name="pick_account">Pick a Google Account</string>
    <string name="this_account_will_be_used">This account will be used for authentication and to send email messages</string>
    <string name="no_google_accounts_found">No Google accounts found!</string>
    <string name="add_account_to_start"><u>Sign in with a new Google account to start using Peppermint</u></string>
    <string name="only_one_peppermint_account_supported">Only one Peppermint account is supported.</string>
    <string name="authenticating_">Authenticating…</string>
    <string name="syncing_messages_">Syncing Messages…</string>
    <string name="msg_secure_connection">Could not establish a secure connection to the Peppermint server. Please try again later.</string>
    <string name="msg_authentication_error">It was not possible to sign in. Please try again later.</string>
    <string name="msg_google_api_denied">Google sign in is required to continue.</string>
    <string name="msg_invalid_credentials">Invalid credentials.</string>
    <string name="msg_no_internet_try_again">No internet connection. Please check your connectivity settings and try again.</string>
    <string name="dont_want_to_use_account">Don\'t want to use any of these accounts?</string>
    <string name="sign_up_new_google_account"><u>Sign in with a New Google Account</u></string>
    <string name="sign_in">Sign In</string>
    <string name="cant_sign_in">Can\'t sign in?</string>
    <string name="contact_us_for_questions"><u>Contact us for questions</u></string>
    <string name="msg_no_gplay">No Google play services available.</string>
    <string name="pref_default_transcription_language_code">System Language</string>
    <string name="pref_separator_transcription">Transcription</string>
    <string name="pref_title_automatic_transcription">Transcription</string>
    <string name="pref_summary_automatic_transcription">Enable or disable the automatic transcription of audio messages</string>
    <string name="pref_title_transcription_language">Transcription Language</string>
    <string name="pref_summary_transcription_language">Select the language for automatic transcription of audio messages</string>
    <string name="pref_title_displayname">Your name</string>
    <string name="pref_summary_displayname">The receiver will see your name when receiving a message so you need to make sure it\'s your real name</string>
    <string name="pref_sign_out_displayname">Sign Out</string>
    <string name="pref_sign_out_summary">Sign out from Peppermint</string>
    <string name="pref_chat_heads_displayname">Chat Heads</string>
    <string name="pref_chat_heads_summary">Chat heads will be drawn on top of apps and allow quick access to your most recent contacts and received messages</string>
    <string name="msg_insert_name">Please enter a valid name</string>
    <string name="account_general_settings">General Settings</string>
    <string name="account_settings">Account Settings</string>
    <string name="account_settings_desc">Your name, chat heads, and more</string>
    <string name="sending">Sending</string>
    <string name="cancel_sending">Cancel\nSending</string>
    <string name="cancelling">Cancelling</string>
    <string name="hold_to_record">Hold to Record</string>
    <string name="retry">Retry</string>
    <string name="delete">Delete</string>
    <string name="unable_to_send_message">Unable to Send Message</string>
    <string name="msg_unable_to_play">An error occurred while trying to play the message.</string>
    <string name="automatic_transcription">Transcription</string>
    <string name="about">About</string>
    <string name="privacy_policy_terms_of_use">Privacy Policy\n&amp; Terms of Use</string>
    <string name="privacy_policy_terms_of_use_singleline">Privacy Policy &amp; Terms of Use</string>
    <string name="version">Version %1$s</string>
    <string name="send_us_audio_feedback_on_the_app">Send us audio feedback on the app</string>
    <string name="or_email_us_for_support">or email us for support</string>
    <string name="support_display_name">Peppermint Support</string>
        <string name="support_audio_subject" translatable="false">Android feedback from email address</string>
        <string name="support_text_subject" translatable="false">Feedback or question about Peppermint Android app</string>
        <string name="support_email" translatable="false">support@peppermint.com</string>
        <string name="support_text_body" translatable="false">\n\n\n\nNote regarding this feedback. Was provided by %1$s running %2$s with Peppermint v%3$s</string>
    <string name="lang_af_ZA" translatable="false">Afrikaans (Suid-Afrika)</string>
    <string name="lang_id_ID" translatable="false">Bahasa Indonesia (Indonesia)</string>
    <string name="lang_ms_MY" translatable="false">Bahasa Melayu (Malaysia)</string>
    <string name="lang_ca_ES" translatable="false">Català (Espanya)</string>
    <string name="lang_cs_CZ" translatable="false">Čeština (Česká republika)</string>
    <string name="lang_da_DK" translatable="false">Dansk (Danmark)</string>
    <string name="lang_de_DE" translatable="false">Deutsch (Deutschland)</string>
    <string name="lang_en_AU" translatable="false">English (Australia)</string>
    <string name="lang_en_CA" translatable="false">English (Canada)</string>
</resources>