<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <com.peppermint.app.ui.base.views.CustomFontTextView
        android:id="@+id/txtPrivacy"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:gravity="center"
        custom:textFont="@string/font_semibold"
        android:textColor="@color/green2_text"
        android:textSize="18dp"
        android:text="@string/privacy_policy_terms_of_use" />

    <LinearLayout
        android:layout_above="@id/txtPrivacy"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_gravity="center"
            android:src="@drawable/logo_about_144dp"
            />

        <com.peppermint.app.ui.base.views.CustomFontTextView
            android:id="@+id/txtPeppermint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            custom:textFont="@string/font_semibold"
            android:textColor="@color/green2_text"
            android:textSize="30dp"
            android:text="@string/peppermint_com" />

        <com.peppermint.app.ui.base.views.CustomFontTextView
            android:id="@+id/txtVersion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            android:gravity="center"
            custom:textFont="@string/font_semibold"
            android:textColor="@color/dark_grey_text"
            android:textSize="16dp"
            android:text="@string/version" />

    </LinearLayout>

</RelativeLayout>